# russell3000-pairs-trading

./: .coverage  .gitignore  CITATION.cff  README.md  index.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: PAIRS_TRADING_NOTION.md  PROGRESS.md  deep_analysis_v9_issues.md  deep_research_regime_breaks_stat_arb.md  linkedin_2026_02_21.md  linkedin_2026_03_23.md  notion_2026_02_21.md  notion_2026_03_23.md  transaction_costs_and_portfolio_exposure.md  v11_implementation_plan.md
pairs_trading/: __init__.py  benchmark.py  config.py  data_processor.py  fund_profiles.py  json_export.py  main.py  multi_agent_system.py  pair_selector.py  plotting.py  position_sizer.py  risk_manager.py  significance.py  trading_system.py  transaction_costs.py  transformer_agent.py  transformer_encoder.py
scripts/: autopilot.py  check_stop_reason.py  decide_v11_fixes.sh  diagnose_date_issue.py  extract_v10_results.sh  find_actual_stop.py  monitor_v10.sh  monitor_v11_continuous.sh  monitor_v9.sh  quick_diagnosis.py  run_trading_system.py  trace_single_pair.py
tests/: test_benchmark.py  test_costs.py  test_data_processor.py  test_imports.py  test_json_export.py  test_leakage.py  test_pair_selector.py  test_risk_position.py  test_significance.py  test_trading_math.py
