[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "russell3000-pairs-trading"
version = "29.0.0"
description = "Russell 3000 statistical-arbitrage research system: cointegration pair selection, Kalman-filtered spreads, walk-forward validation, significance testing, and baseline benchmarks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Navnoor Bawa", email = "navnoorquant@gmail.com" }]
keywords = ["statistical-arbitrage", "pairs-trading", "cointegration", "kalman-filter", "quantitative-finance"]

# Runtime dependencies are pinned in requirements.txt (the exact interpreter set that
# produced the published results). Listed here unpinned for tooling/installability.
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "torch",
    "matplotlib",
    "seaborn",
    "tqdm",
    "yfinance",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://navnoorbawa.github.io/russell3000-pairs-trading/"
Repository = "https://github.com/NavnoorBawa/russell3000-pairs-trading"

[tool.setuptools]
packages = ["pairs_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
