[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "russell3000-pairs-trading"
version = "29.0.0"
description = "Russell 3000 statistical-arbitrage research system: cointegration pair selection, Kalman-filtered spreads, walk-forward validation, significance testing, and baseline benchmarks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Navnoor Bawa", email = "navnoorquant@gmail.com" }]
keywords = ["statistical-arbitrage", "pairs-trading", "cointegration", "kalman-filter", "quantitative-finance"]

# Runtime dependencies are pinned in requirements.txt (the exact interpreter set that
# produced the published results). Listed here unpinned for tooling/installability.
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "torch",
    "matplotlib",
    "seaborn",
    "tqdm",
    "yfinance",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://navnoorbawa.github.io/russell3000-pairs-trading/"
Repository = "https://github.com/NavnoorBawa/russell3000-pairs-trading"

[tool.setuptools]
packages = ["pairs_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"
# Lint the package and its tests; scripts/ and archive/ are throwaway diagnostics.
extend-exclude = ["scripts", "archive"]

[tool.ruff.lint]
# pyflakes (real bugs: unused imports/vars, undefined names) + key pycodestyle errors.
# E501 (line length) is intentionally not enforced — reflowing 6k LOC of working,
# verified research code is churn, not quality.
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# config.py is a deliberate re-export hub: other modules do `from config import pd, np…`.
# Those imports are "unused" in config.py itself but required everywhere else.
"pairs_trading/config.py" = ["F401"]
"pairs_trading/__init__.py" = ["F401"]
